fix: 🐛 scrollbar at bottom & Dialog props

--- a/src/components/dialog/Dialog.module.scss
+++ b/src/components/dialog/Dialog.module.scss
@@ -13,6 +13,10 @@
 
   transition: background-color 0.25s ease;
 
+  &--active {
+    background-color: $oceanic;
+  }
+
   &:hover {
     background-color: $oceanic;
   }
